RESOLVED FIXED 36207
[Qt] Fix LayoutTests/http/tests/appcache/max-size.html
https://bugs.webkit.org/show_bug.cgi?id=36207
Summary [Qt] Fix LayoutTests/http/tests/appcache/max-size.html
Laszlo Gombos
Reported 2010-03-16 21:45:25 PDT
Implement setAppCacheMaximumSize for Qt.
Attachments
patch (3.26 KB, patch)
2010-03-16 21:51 PDT, Laszlo Gombos
no flags
Laszlo Gombos
Comment 1 2010-03-16 21:51:20 PDT
Chang Shu
Comment 2 2010-03-17 06:30:36 PDT
*** Bug 36138 has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 3 2010-03-18 06:40:36 PDT
Comment on attachment 50873 [details] patch Rejecting patch 50873 from commit-queue. Failed to run "['/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', '--reviewer', 'Kenneth Rohde Christiansen', '--force']" exit_code: 1 patching file WebKitTools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file WebKitTools/DumpRenderTree/qt/LayoutTestControllerQt.cpp patching file WebKitTools/DumpRenderTree/qt/LayoutTestControllerQt.h patching file LayoutTests/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file LayoutTests/platform/qt/Skipped Hunk #1 FAILED at 28. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/qt/Skipped.rej Full output: http://webkit-commit-queue.appspot.com/results/1015015
Laszlo Gombos
Comment 4 2010-03-18 23:08:50 PDT
Note You need to log in before you can comment on or make changes to this bug.