2010-03-18  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix LayoutTests/http/tests/appcache/max-size.html
        https://bugs.webkit.org/show_bug.cgi?id=36207

        * platform/qt/Skipped:

2010-03-18  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix LayoutTests/http/tests/appcache/max-size.html
        https://bugs.webkit.org/show_bug.cgi?id=36207

        Implement setAppCacheMaximumSize() for Qt.

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::setAppCacheMaximumSize):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:



Canonical link: https://commits.webkit.org/47505@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56211 268f45cc-cd09-0410-ab3c-d52691b4dbfc